--- a/fxbp-scanner/admin/css/fxbp-scanner-admin.css
+++ b/fxbp-scanner/admin/css/fxbp-scanner-admin.css
@@ -181,3 +181,18 @@
   font-size: 20px !important;
   font-weight: 600;
 }
+
+.green-msg {
+  color: #3cbc73;
+  font-size: 20px !important;
+  font-weight: 600;
+}
+
+.selected-options {
+  font-size: 20px;
+  padding: 25px;
+  display: block;
+  text-align: center;
+  color: #127dac;
+  font-weight: 600;
+}
